# vdv-pkpass

./: .dockerignore  .gitignore  Dockerfile  build.sh  manage.py  package.json  requirements.txt
aztec/: pom.xml
barkoder/: Barkoder.hpp  Barkoder.py  BarkoderClasses.hpp  CMakeLists.txt  Config.hpp  SpecificConfigs.hpp  pywrap.cpp
kube/: apply.sh  cron.yaml  django.yaml  ingress.yaml
main/: admin.py  apn.py  apple_api.py  aztec.py  db_abo.py  forms.py  models.py  pkpass.py  saarvv.py  ticket.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_ticket_ticket_type_alter_ticket_id_and_more.py  0003_alter_ticketinstance_options_and_more.py  0004_uicticketinstance_vdvticketinstance_and_more.py  0005_appledevice_alter_ticket_ticket_type_and_more.py  0006_ticket_last_updated_appleregistration.py  0007_alter_uicticketinstance_options_and_more.py  0008_account.py  0009_account_db_account_id.py  0010_account_db_cookies_alter_account_db_account_id_and_more.py  0011_remove_account_db_cookies_account_db_refresh_token_and_more.py  0012_account_saarvv_token.py  0013_account_saarvv_device_id.py  0014_ticket_account.py  0015_dbsubscription.py  0016_dbsubscription_account.py  0017_alter_dbsubscription_options_ticket_db_subscription_and_more.py  0018_uicticketinstance_validity_end_and_more.py  0019_ticket_saarvv_acccount_alter_ticket_db_subscription.py  0020_rename_saarvv_acccount_ticket_saarvv_account.py
main/templatetags/: __init__.py  plai.py  rics.py
main/uic/: __init__.py  cd.py  db.py  flex.py  (+7 more)
vdv_pkpass/: asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
(+69 files in other folders)
